# GraphicalCompressionEncryptionTool

GraphicalCompressionEncryptionTool/: CMakeLists.txt
GraphicalCompressionEncryptionTool/include/: backgroundprocessing.h
GraphicalCompressionEncryptionTool/src/: backgroundprocessing.cpp  main.cpp
